--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,12 @@ requires-python = ">=3.10"
 dependencies = [
   "numpy",
   "scipy",
-  "pandas",
   "matplotlib",
   "pyyaml",
   "torch",
-  "transformers",
   "scikit-learn",
+  "matplotlib",
+  "opencv-python",
 ]
 
 [project.urls]
