export segmentation masks

--- a/config/best_synthetic_config.json
+++ b/config/best_synthetic_config.json
@@ -4,18 +4,19 @@
     512,
     512
   ],
+  "generate_mask": true,
   "fps": 10,
   "num_frames": 50,
-  "snr": 3.3834751001722396,
-  "grow_amp": 4.008915599775867,
-  "grow_freq": 0.04692615025138612,
-  "shrink_amp": 2.1230519268036554,
-  "shrink_freq": 0.21542927930706351,
-  "motion": 2.418520471453683,
-  "max_length": 46.52178688719603,
-  "min_length": 12.612099922585648,
-  "sigma_x": 3,
-  "sigma_y": 0,
+  "snr": 3.810970644443822,
+  "grow_amp": 4.841411562932285,
+  "grow_freq": 0.19255169316091944,
+  "shrink_amp": 7.789742055243734,
+  "shrink_freq": 0.0695431111917985,
+  "motion": 1.0836913432250905,
+  "max_length": 25.312195666497647,
+  "min_length": 16.344998741658028,
+  "sigma_x": 9,
+  "sigma_y": 6,
   "margin": 5,
-  "num_tubulus": 14
+  "num_tubulus": 6
 }
