--- a/config/best_synthetic_config.json
+++ b/config/best_synthetic_config.json
@@ -1,22 +1,27 @@
 {
-  "id": 0,
+  "id": 3,
   "img_size": [
     462,
     462
   ],
   "fps": 25,
-  "num_frames": 167,
-  "grow_amp": 2.0,
+  "num_frames": 50,
+  "grow_amp": 8.0,
   "grow_freq": 0.05,
   "shrink_amp": 4.0,
   "shrink_freq": 0.25,
+  "profile_noise": 0.5,
   "motion": 2.1,
-  "max_length": 50,
-  "min_length": 5,
-  "num_tubulus": 10,
+  "max_length": 150,
+  "min_length": 20,
+  "num_tubulus": 20,
   "margin": 5,
-  "sigma_x": 1.2,
-  "sigma_y": 1.2,
+  "width_var_std": 0.05,
+  "bend_amp_px": 2.0,
+  "bend_prob": 0.25,
+  "bend_phase_rand": 0.1,
+  "sigma_x": 0.5,
+  "sigma_y": 0.5,
   "background_level": 0.74,
   "gaussian_noise": 0.09,
   "bleach_tau": Infinity,
