Update synthetic configuration parameters for improved performance and reproducibility

--- a/config/best_synthetic_config_B.json
+++ b/config/best_synthetic_config_B.json
@@ -7,52 +7,52 @@
   "fps": 5,
   "num_frames": 50,
   "color_mode": false,
-  "grow_frames": 13,
-  "shrink_frames": 8,
-  "profile_noise": 8.791476984022268,
-  "motion": 4.838549289078084,
-  "min_length_min": 28,
-  "min_length_max": 86,
-  "max_length_min": 112,
-  "max_length_max": 168,
-  "pause_on_max_length": 9,
-  "pause_on_min_length": 9,
-  "num_tubulus": 23,
-  "tubuli_min_dist": 45,
-  "margin": 9,
-  "width_var_std": 0.09512638551635459,
-  "bend_amplitude": 0.9330906723575478,
-  "bend_prob": 0.4865947846416595,
-  "bend_straight_fraction": 0.33983616722647747,
-  "sigma_x": 0.4561606042975169,
-  "sigma_y": 1.3067739204688804,
-  "background_level": 0.6286999884622138,
-  "tubulus_contrast": 0.02731659744489115,
-  "gaussian_noise": 0.03548670876586731,
-  "bleach_tau": 62.77205765148729,
-  "jitter_px": 0.7123260902295272,
-  "vignetting_strength": 0.00028467956727445335,
+  "grow_frames": 20,
+  "shrink_frames": 5,
+  "profile_noise": 4.450479319529565,
+  "motion": 1.456019678376259,
+  "min_length_min": 50,
+  "min_length_max": 97,
+  "max_length_min": 115,
+  "max_length_max": 170,
+  "pause_on_max_length": 4,
+  "pause_on_min_length": 6,
+  "num_tubulus": 17,
+  "tubuli_min_dist": 15,
+  "margin": 12,
+  "width_var_std": 0.10247582415635194,
+  "bend_amplitude": 5.6719062659957356,
+  "bend_prob": 0.37180954152279105,
+  "bend_straight_fraction": 0.49982699248699125,
+  "sigma_x": 1.0137244493290023,
+  "sigma_y": 1.0851591472420203,
+  "background_level": 0.9904884824995526,
+  "tubulus_contrast": 0.2570401929259434,
+  "gaussian_noise": 0.1513093343974478,
+  "bleach_tau": 435.62929965689585,
+  "jitter_px": 1.1556988144534983,
+  "vignetting_strength": 6.244914288015954e-05,
   "invert_contrast": false,
-  "global_blur_sigma": 2.73385564058246,
-  "fixed_spot_count": 14,
-  "fixed_spot_intensity_min": 0.15449913393695444,
-  "fixed_spot_intensity_max": 0.19296963131977654,
+  "global_blur_sigma": 1.3522112774552315,
+  "fixed_spot_count": 61,
+  "fixed_spot_intensity_min": 0.08776918206205861,
+  "fixed_spot_intensity_max": 0.23093769036839523,
   "fixed_spot_radius_min": 1,
-  "fixed_spot_radius_max": 1,
-  "fixed_spot_kernel_size_min": 5,
-  "fixed_spot_kernel_size_max": 7,
-  "fixed_spot_sigma": 4.537813693628162,
-  "moving_spot_count": 19,
-  "moving_spot_intensity_min": 0.04412383971767676,
-  "moving_spot_intensity_max": 0.04914201070869824,
-  "moving_spot_radius_min": 13,
-  "moving_spot_radius_max": 16,
-  "moving_spot_kernel_size_min": 5,
-  "moving_spot_kernel_size_max": 7,
-  "moving_spot_sigma": 1.2971640912534255,
+  "fixed_spot_radius_max": 3,
+  "fixed_spot_kernel_size_min": 3,
+  "fixed_spot_kernel_size_max": 9,
+  "fixed_spot_sigma": 2.9298885674167865,
+  "moving_spot_count": 36,
+  "moving_spot_intensity_min": 0.05201405169008083,
+  "moving_spot_intensity_max": 0.09342673677159312,
+  "moving_spot_radius_min": 10,
+  "moving_spot_radius_max": 15,
+  "moving_spot_kernel_size_min": 10,
+  "moving_spot_kernel_size_max": 10,
+  "moving_spot_sigma": 2.161959098839088,
   "show_time": false,
   "show_scale": false,
-  "um_per_pixel": 0.40597758205321993,
-  "scale_bar_um": 14.451514295110618,
+  "um_per_pixel": 0.48969631347432285,
+  "scale_bar_um": 10.973869843098672,
   "generate_mask": true
 }
