--- a/config/synthetic_config.json
+++ b/config/synthetic_config.json
@@ -1,5 +1,5 @@
 {
-  "id": 36,
+  "id": 108,
   "img_size": [
     462,
     462
@@ -7,9 +7,10 @@
   "fps": 5,
   "num_frames": 100,
   "color_mode": false,
-  "grow_frames": 30,
-  "shrink_frames": 10,
-  "profile_noise": 5,
+  "growth_speed": 2.5,
+  "shrink_speed": 5.0,
+  "catastrophe_prob": 0.01,
+  "rescue_prob": 0.005,
   "min_base_wagon_length": 10.0,
   "max_base_wagon_length": 60.0,
   "max_num_wagons": 20,
@@ -36,6 +37,18 @@
   "sigma_y": 0.8,
   "background_level": 0.74,
   "tubulus_contrast": 0.2,
+  "seed_color_rgb": [
+    1.0,
+    0.2,
+    0.2
+  ],
+  "tubulus_color_rgb": [
+    0.2,
+    1.0,
+    0.2
+  ],
+  "tip_brightness_factor": 1.5,
+  "quantum_efficiency": 50.0,
   "gaussian_noise": 0.09,
   "bleach_tau": Infinity,
   "jitter_px": 0.5,
