--- a/config/synthetic_config.json
+++ b/config/synthetic_config.json
@@ -1,20 +1,20 @@
 {
-  "id": 108,
+  "id": 303,
   "img_size": [
     462,
     462
   ],
   "fps": 5,
-  "num_frames": 100,
-  "color_mode": false,
+  "num_frames": 20,
+  "color_mode": true,
   "growth_speed": 2.5,
   "shrink_speed": 5.0,
   "catastrophe_prob": 0.01,
   "rescue_prob": 0.005,
-  "min_base_wagon_length": 10.0,
-  "max_base_wagon_length": 60.0,
+  "min_base_wagon_length": 2.0,
+  "max_base_wagon_length": 10.0,
   "max_num_wagons": 20,
-  "max_angle": 0.19634954084936207,
+  "max_angle": 3,
   "max_angle_change_prob": 0.001,
   "min_length_min": 50,
   "min_length_max": 80,
@@ -27,7 +27,7 @@
   "pause_on_max_length": 5,
   "pause_on_min_length": 10,
   "num_tubulus": 20,
-  "tubuli_min_dist": 20,
+  "tubuli_min_dist": 50,
   "margin": 5,
   "width_var_std": 0.05,
   "bend_amplitude": 5.0,
@@ -35,25 +35,20 @@
   "bend_straight_fraction": 0.9,
   "sigma_x": 0.3,
   "sigma_y": 0.8,
-  "background_level": 0.74,
-  "tubulus_contrast": 0.2,
-  "seed_color_rgb": [
+  "background_level": 0.8,
+  "tubulus_contrast": -0.4,
+  "seed_red_channel_boost": 0.5,
+  "annotation_color_rgb": [
     1.0,
-    0.2,
-    0.2
-  ],
-  "tubulus_color_rgb": [
-    0.2,
     1.0,
-    0.2
+    1.0
   ],
-  "tip_brightness_factor": 1.5,
+  "tip_brightness_factor": 1.0,
   "quantum_efficiency": 50.0,
   "gaussian_noise": 0.09,
   "bleach_tau": Infinity,
   "jitter_px": 0.5,
   "vignetting_strength": 0.05,
-  "invert_contrast": true,
   "global_blur_sigma": 0.9,
   "fixed_spots": {
     "count": 30,
