--- a/config/synthetic_config.json
+++ b/config/synthetic_config.json
@@ -1,29 +1,30 @@
 {
-  "id": 303,
+  "id": 306,
   "img_size": [
     462,
     462
   ],
   "fps": 5,
-  "num_frames": 20,
+  "num_frames": 50,
   "color_mode": true,
   "growth_speed": 2.5,
   "shrink_speed": 5.0,
   "catastrophe_prob": 0.01,
   "rescue_prob": 0.005,
-  "min_base_wagon_length": 2.0,
-  "max_base_wagon_length": 10.0,
+  "min_base_wagon_length": 10.0,
+  "max_base_wagon_length": 50.0,
   "max_num_wagons": 20,
-  "max_angle": 3,
-  "max_angle_change_prob": 0.001,
+  "max_angle": 0.1,
+  "max_angle_sign_changes": 1,
+  "prob_to_flip_bend": 0.001,
   "min_length_min": 50,
   "min_length_max": 80,
   "max_length_min": 100,
   "max_length_max": 200,
-  "min_wagon_length_min": 5,
-  "min_wagon_length_max": 20,
-  "max_wagon_length_min": 20,
-  "max_wagon_length_max": 100,
+  "min_wagon_length_min": 1,
+  "min_wagon_length_max": 5,
+  "max_wagon_length_min": 10,
+  "max_wagon_length_max": 20,
   "pause_on_max_length": 5,
   "pause_on_min_length": 10,
   "num_tubulus": 20,
