refactor(config): update JSON configuration files for improved clarity and structure

--- a/config/best_synthetic_config_A.json
+++ b/config/best_synthetic_config_A.json
@@ -6,53 +6,84 @@
   ],
   "fps": 5,
   "num_frames": 50,
-  "color_mode": false,
-  "grow_frames": 20,
-  "shrink_frames": 5,
-  "profile_noise": 0.34435550999635356,
-  "motion": 3.016458225241981,
-  "min_length_min": 23,
-  "min_length_max": 88,
-  "max_length_min": 115,
-  "max_length_max": 171,
+  "color_mode": true,
+  "growth_speed": 2.160308893042452,
+  "shrink_speed": 3.4386532842060546,
+  "catastrophe_prob": 0.0011198572327852435,
+  "rescue_prob": 0.0005014896651934128,
+  "min_base_wagon_length": 16.853544010228294,
+  "max_base_wagon_length": 42.348382289733316,
+  "max_num_wagons": 17,
+  "max_angle": 0.37511103791678835,
+  "max_angle_sign_changes": 0,
+  "prob_to_flip_bend": 0.023982735841437838,
+  "min_length_min": 37,
+  "min_length_max": 83,
+  "max_length_min": 84,
+  "max_length_max": 204,
+  "min_wagon_length_min": 10,
+  "min_wagon_length_max": 17,
+  "max_wagon_length_min": 11,
+  "max_wagon_length_max": 22,
   "pause_on_max_length": 5,
-  "pause_on_min_length": 9,
-  "num_tubulus": 25,
-  "tubuli_min_dist": 28,
-  "margin": 5,
-  "width_var_std": 0.030234517443849834,
-  "bend_amplitude": 3.5058964904819305,
-  "bend_prob": 0.4995218027380196,
-  "bend_straight_fraction": 0.33110491448116586,
-  "sigma_x": 1.8877249066797304,
-  "sigma_y": 1.7130946773534164,
-  "background_level": 0.8666564616377759,
-  "tubulus_contrast": 0.4573338475954071,
-  "gaussian_noise": 0.1395670555637066,
-  "bleach_tau": 312.3359048968869,
-  "jitter_px": 1.7750412037420256,
-  "vignetting_strength": 0.011654135829331594,
-  "invert_contrast": false,
-  "global_blur_sigma": 0.2721499794162595,
-  "fixed_spot_count": 59,
-  "fixed_spot_intensity_min": 0.24376927151427946,
-  "fixed_spot_intensity_max": 0.24426405927909445,
-  "fixed_spot_radius_min": 2,
-  "fixed_spot_radius_max": 6,
-  "fixed_spot_kernel_size_min": 0,
-  "fixed_spot_kernel_size_max": 5,
-  "fixed_spot_sigma": 4.113469271127852,
-  "moving_spot_count": 31,
-  "moving_spot_intensity_min": 0.03811125406843635,
-  "moving_spot_intensity_max": 0.0509930919844021,
-  "moving_spot_radius_min": 2,
-  "moving_spot_radius_max": 12,
-  "moving_spot_kernel_size_min": 0,
-  "moving_spot_kernel_size_max": 2,
-  "moving_spot_sigma": 4.635493763063976,
-  "show_time": true,
-  "show_scale": true,
-  "um_per_pixel": 0.4480045759462902,
-  "scale_bar_um": 19.57048885815428,
+  "pause_on_min_length": 5,
+  "num_tubulus": 13,
+  "tubuli_min_dist": 48,
+  "margin": 6,
+  "sigma_x": 0.6566813242722165,
+  "sigma_y": 1.635642038106259,
+  "width_var_std": 0.04189400424589451,
+  "background_level": 0.8226916771778475,
+  "tubulus_contrast": 0.2149043615661216,
+  "seed_red_channel_boost": 0.8944620371315525,
+  "annotation_color_rgb": [
+    1.0,
+    1.0,
+    1.0
+  ],
+  "tip_brightness_factor": 1.8624440600421235,
+  "quantum_efficiency": 138.74659415869277,
+  "gaussian_noise": 0.13662588057102248,
+  "bleach_tau": 98.91716111881675,
+  "jitter_px": 0.2646978784935781,
+  "vignetting_strength": 0.09587359052767827,
+  "global_blur_sigma": 2.0842925640674848,
+  "fixed_spots": {
+    "count": 97,
+    "intensity_min": 0.038574202246758435,
+    "intensity_max": 0.21201304772451074,
+    "radius_min": 1,
+    "radius_max": 6,
+    "kernel_size_min": 0,
+    "kernel_size_max": 7,
+    "sigma": 4.029184477487998,
+    "max_step": null
+  },
+  "moving_spots": {
+    "count": 4,
+    "intensity_min": 0.06458818105096156,
+    "intensity_max": 0.2166254267218608,
+    "radius_min": 5,
+    "radius_max": 8,
+    "kernel_size_min": 1,
+    "kernel_size_max": 8,
+    "sigma": 4.523595892931,
+    "max_step": 7
+  },
+  "random_spots": {
+    "count": 23,
+    "intensity_min": 0.009134665653912237,
+    "intensity_max": 0.12271077728240827,
+    "radius_min": 5,
+    "radius_max": 6,
+    "kernel_size_min": 0,
+    "kernel_size_max": 5,
+    "sigma": 0.7485942241232897,
+    "max_step": null
+  },
+  "show_time": false,
+  "show_scale": false,
+  "um_per_pixel": 0.15914197587162907,
+  "scale_bar_um": 12.605969378468277,
   "generate_mask": true
 }
