--- a/config/tuning_config_for_sampling.json
+++ b/config/tuning_config_for_sampling.json
@@ -1,11 +1,11 @@
 {
   "model_name": "openai/clip-vit-base-patch32",
   "hf_cache_dir": null,
-  "reference_series_dir": "../../data/mpi/type_A",
+  "reference_series_dir": "data/mpi/type_A",
   "num_compare_series": 5,
   "num_compare_frames": 100,
-  "temp_dir": "../../.temp/",
-  "output_config_file": "/Users/koddenbrock/Repository/microtubule_tracking/config/best_synthetic_config_A.json",
+  "temp_dir": ".temp/",
+  "output_config_file": "config/best_synthetic_config_A.json",
   "output_config_id": 1000,
   "output_config_num_frames": 50,
   "direction": "maximize",
