--- a/config/tuning_config_A.json
+++ b/config/tuning_config_A.json
@@ -1,32 +1,38 @@
 {
   "model_name": "openai/clip-vit-base-patch32",
   "hf_cache_dir": null,
-  "reference_series_dir": "../../data/mpi/type_A",
+  "reference_series_dir": "data/mpi/type_A",
   "num_compare_series": 5,
-  "num_compare_frames": 5,
-  "temp_dir": "../../.temp/",
-  "output_config_file": "/Users/koddenbrock/Repository/microtubule_tracking/config/best_synthetic_config_A.json",
+  "num_compare_frames": 1,
+  "temp_dir": ".temp/",
+  "output_config_file": "config/best_synthetic_config_A.json",
   "output_config_id": "best_A",
   "output_config_num_frames": 50,
   "direction": "maximize",
   "metric": "cosine_similarity",
-  "num_trials": 1000,
+  "num_trials": 100,
+  "pca_components": 32,
+  "load_if_exists": false,
   "img_size": [
     462,
     462
   ],
   "fps": 5,
-  "grow_frames_range": [
-    10,
-    30
+  "growth_speed_range": [
+    1.0,
+    5.0
   ],
-  "shrink_frames_range": [
-    5,
-    20
-  ],
-  "profile_noise_range": [
-    0.0,
+  "shrink_speed_range": [
+    2.0,
     10.0
+  ],
+  "catastrophe_prob_range": [
+    0.001,
+    0.05
+  ],
+  "rescue_prob_range": [
+    0.0005,
+    0.02
   ],
   "pause_on_max_length_range": [
     0,
@@ -36,9 +42,45 @@
     0,
     10
   ],
-  "motion_range": [
-    0.5,
-    5.0
+  "min_base_wagon_length_range": [
+    10.0,
+    50.0
+  ],
+  "max_base_wagon_length_range": [
+    10.0,
+    50.0
+  ],
+  "max_num_wagons_range": [
+    1,
+    20
+  ],
+  "max_angle_range": [
+    0.05,
+    0.4
+  ],
+  "max_angle_sign_changes_range": [
+    0,
+    3
+  ],
+  "prob_to_flip_bend_range": [
+    0.001,
+    0.1
+  ],
+  "min_wagon_length_min_range": [
+    1,
+    10
+  ],
+  "min_wagon_length_max_range": [
+    10,
+    20
+  ],
+  "max_wagon_length_min_range": [
+    10,
+    20
+  ],
+  "max_wagon_length_max_range": [
+    20,
+    50
   ],
   "min_length_min_range": [
     20,
@@ -72,18 +114,6 @@
     0.0,
     0.2
   ],
-  "bend_amplitude_range": [
-    0.0,
-    10.0
-  ],
-  "bend_prob_range": [
-    0.0,
-    0.5
-  ],
-  "bend_straight_fraction_range": [
-    0.0,
-    1.0
-  ],
   "sigma_x_range": [
     0.1,
     2.0
@@ -99,6 +129,18 @@
   "tubulus_contrast_range": [
     0.0,
     0.5
+  ],
+  "seed_red_channel_boost_range": [
+    0.1,
+    1.0
+  ],
+  "tip_brightness_factor_range": [
+    1.0,
+    2.0
+  ],
+  "quantum_efficiency_range": [
+    20.0,
+    150.0
   ],
   "gaussian_noise_range": [
     0.0,
@@ -116,54 +158,118 @@
     0.0,
     0.2
   ],
-  "invert_contrast_options": [
-    true,
-    false
-  ],
   "global_blur_sigma_range": [
     0.0,
     3.0
   ],
-  "fixed_spot_count_range": [
-    0,
-    100
-  ],
-  "fixed_spot_intensity_range": [
-    0.0,
-    0.3
-  ],
-  "fixed_spot_radius_range": [
-    1,
-    10
-  ],
-  "fixed_spot_kernel_size_range": [
-    0,
-    10
-  ],
-  "fixed_spot_sigma_range": [
-    0.1,
-    5.0
-  ],
-  "moving_spot_count_range": [
-    0,
-    50
-  ],
-  "moving_spot_intensity_range": [
-    0.0,
-    0.1
-  ],
-  "moving_spot_radius_range": [
-    1,
-    20
-  ],
-  "moving_spot_kernel_size_range": [
-    0,
-    10
-  ],
-  "moving_spot_sigma_range": [
-    0.1,
-    5.0
-  ],
+  "fixed_spots_tuning": {
+    "count_range": [
+      0,
+      100
+    ],
+    "intensity_min_range": [
+      0.0001,
+      0.1
+    ],
+    "intensity_max_range": [
+      0.1,
+      0.3
+    ],
+    "radius_min_range": [
+      1,
+      5
+    ],
+    "radius_max_range": [
+      5,
+      10
+    ],
+    "kernel_size_min_range": [
+      0,
+      5
+    ],
+    "kernel_size_max_range": [
+      5,
+      10
+    ],
+    "sigma_range": [
+      0.1,
+      5.0
+    ],
+    "max_step_range": null
+  },
+  "moving_spots_tuning": {
+    "count_range": [
+      0,
+      50
+    ],
+    "intensity_min_range": [
+      0.0001,
+      0.1
+    ],
+    "intensity_max_range": [
+      0.1,
+      0.3
+    ],
+    "radius_min_range": [
+      1,
+      5
+    ],
+    "radius_max_range": [
+      5,
+      10
+    ],
+    "kernel_size_min_range": [
+      0,
+      5
+    ],
+    "kernel_size_max_range": [
+      5,
+      10
+    ],
+    "sigma_range": [
+      0.1,
+      5.0
+    ],
+    "max_step_range": [
+      1,
+      10
+    ]
+  },
+  "random_spots_tuning": {
+    "count_range": [
+      0,
+      50
+    ],
+    "intensity_min_range": [
+      0.0001,
+      0.1
+    ],
+    "intensity_max_range": [
+      0.0,
+      0.5
+    ],
+    "radius_min_range": [
+      1,
+      5
+    ],
+    "radius_max_range": [
+      5,
+      10
+    ],
+    "kernel_size_min_range": [
+      0,
+      5
+    ],
+    "kernel_size_max_range": [
+      5,
+      10
+    ],
+    "sigma_range": [
+      0.1,
+      5.0
+    ],
+    "max_step_range": null
+  },
   "show_time_options": [
     true,
     false
@@ -179,9 +285,5 @@
   "scale_bar_um_range": [
     1.0,
     20.0
-  ],
-  "color_mode_options": [
-    true,
-    false
   ]
 }
