--- a/config/synthetic_config_large.json
+++ b/config/synthetic_config_large.json
@@ -1,11 +1,11 @@
 {
-  "id": 306,
+  "id": 12,
   "img_size": [
-    462,
-    462
+    500,
+    500
   ],
   "fps": 5,
-  "num_frames": 50,
+  "num_frames": 20,
   "color_mode": true,
   "growth_speed": 2.5,
   "shrink_speed": 5.0,
@@ -13,31 +13,29 @@
   "rescue_prob": 0.005,
   "min_base_wagon_length": 10.0,
   "max_base_wagon_length": 50.0,
-  "max_num_wagons": 20,
+  "max_num_wagons": 10,
   "max_angle": 0.1,
-  "max_angle_sign_changes": 1,
+  "bending_prob": 0.25,
+  "max_angle_sign_changes": 0,
   "prob_to_flip_bend": 0.001,
-  "min_length_min": 50,
-  "min_length_max": 80,
-  "max_length_min": 100,
-  "max_length_max": 200,
+  "min_length_min": 20,
+  "min_length_max": 50,
+  "max_length_min": 80,
+  "max_length_max": 150,
   "min_wagon_length_min": 1,
   "min_wagon_length_max": 5,
   "max_wagon_length_min": 10,
   "max_wagon_length_max": 20,
   "pause_on_max_length": 5,
   "pause_on_min_length": 10,
-  "num_tubulus": 20,
-  "tubuli_min_dist": 50,
+  "num_tubulus": 5,
+  "tubuli_seed_min_dist": 50,
   "margin": 5,
-  "width_var_std": 0.05,
-  "bend_amplitude": 5.0,
-  "bend_prob": 0.01,
-  "bend_straight_fraction": 0.9,
   "sigma_x": 0.3,
   "sigma_y": 0.8,
-  "background_level": 0.8,
-  "tubulus_contrast": -0.4,
+  "width_var_std": 0.05,
+  "background_level": 0.7,
+  "tubulus_contrast": -0.35,
   "seed_red_channel_boost": 0.5,
   "annotation_color_rgb": [
     1.0,
@@ -48,45 +46,48 @@
   "quantum_efficiency": 50.0,
   "gaussian_noise": 0.09,
   "bleach_tau": Infinity,
-  "jitter_px": 0.5,
+  "jitter_px": 0.1,
   "vignetting_strength": 0.05,
   "global_blur_sigma": 0.9,
   "fixed_spots": {
     "count": 30,
+    "intensity_min": 0.005,
+    "intensity_max": 0.4,
+    "radius_min": 1,
+    "radius_max": 3,
+    "kernel_size_min": 0,
+    "kernel_size_max": 3,
+    "sigma": 0.3,
+    "color_mode": "dark",
+    "max_step": null
+  },
+  "moving_spots": {
+    "count": 20,
     "intensity_min": 0.005,
     "intensity_max": 0.1,
     "radius_min": 1,
     "radius_max": 3,
     "kernel_size_min": 0,
     "kernel_size_max": 3,
-    "sigma": 0.1,
-    "max_step": null
-  },
-  "moving_spots": {
-    "count": 20,
-    "intensity_min": 0.005,
-    "intensity_max": 0.08,
-    "radius_min": 1,
-    "radius_max": 3,
-    "kernel_size_min": 0,
-    "kernel_size_max": 2,
     "sigma": 0.3,
+    "color_mode": "bright",
     "max_step": 5
   },
   "random_spots": {
     "count": 20,
     "intensity_min": 0.005,
-    "intensity_max": 0.08,
+    "intensity_max": 0.1,
     "radius_min": 1,
     "radius_max": 5,
     "kernel_size_min": 0,
-    "kernel_size_max": 2,
+    "kernel_size_max": 3,
     "sigma": 0.5,
+    "color_mode": "bright",
     "max_step": null
   },
-  "show_time": true,
-  "show_scale": true,
-  "um_per_pixel": 0.108,
-  "scale_bar_um": 5.0,
+  "show_time": false,
+  "show_scale": false,
+  "um_per_pixel": 0.5,
+  "scale_bar_um": 2.0,
   "generate_mask": true
 }
