--- a/config/best_synthetic_config_A.json
+++ b/config/best_synthetic_config_A.json
@@ -85,5 +85,6 @@
   "show_scale": false,
   "um_per_pixel": 0.15914197587162907,
   "scale_bar_um": 12.605969378468277,
-  "generate_mask": true
+  "generate_tubuli_mask": true,
+  "generate_seed_mask": true
 }
