--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,10 @@ dependencies = [
   "imageio",
   "scikit-image",
   "transformers",
-  "cellpose-adapt @ git+https://github.com/mario-koddenbrock/cellpose-adapt.git"
+  "cellpose-adapt @ git+https://github.com/mario-koddenbrock/cellpose-adapt.git",
+  "albumentations",
+  "staintools",
+  "spams"
 ]
 
 [project.urls]
