fix(dependencies): remove unused packages from pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,7 @@ dependencies = [
   "scikit-image",
   "transformers",
   "cellpose-adapt @ git+https://github.com/mario-koddenbrock/cellpose-adapt.git",
-  "albumentations",
-  "staintools",
-  "spams"
+  "albumentations"
 ]
 
 [project.urls]
