feat(tracker): add BTrackTracker implementation with configuration support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
   "scikit-image",
   "transformers",
   "cellpose-adapt @ git+https://github.com/mario-koddenbrock/cellpose-adapt.git",
-  "albumentations"
+  "albumentations",
+  "btrack"
 ]
 
 [project.urls]
