--- a/config/synthetic_config_small.json
+++ b/config/synthetic_config_small.json
@@ -1,11 +1,11 @@
 {
-  "id": 12,
+  "id": 14,
   "img_size": [
-    1920,
-    1920
+    512,
+    512
   ],
   "fps": 5,
-  "num_frames": 100,
+  "num_frames": 20,
   "color_mode": true,
   "growth_speed": 2.5,
   "shrink_speed": 5.0,
@@ -28,8 +28,8 @@
   "max_wagon_length_max": 20,
   "pause_on_max_length": 5,
   "pause_on_min_length": 10,
-  "num_tubuli": 100,
-  "tubuli_min_dist": 50,
+  "num_tubuli": 20,
+  "tubuli_seed_min_dist": 50,
   "margin": 5,
   "sigma_x": 0.3,
   "sigma_y": 0.7,
@@ -58,6 +58,7 @@
     "kernel_size_min": 0,
     "kernel_size_max": 3,
     "sigma": 0.2,
+    "color_mode": "dark",
     "max_step": null
   },
   "moving_spots": {
@@ -69,6 +70,7 @@
     "kernel_size_min": 0,
     "kernel_size_max": 2,
     "sigma": 0.3,
+    "color_mode": "dark",
     "max_step": 5
   },
   "random_spots": {
@@ -80,7 +82,32 @@
     "kernel_size_min": 0,
     "kernel_size_max": 2,
     "sigma": 0.5,
+    "color_mode": "dark",
     "max_step": null
+  },
+  "albumentations": {
+    "p": 0.0,
+    "rotate_limit": 15,
+    "shift_scale_rotate_p": 0.5,
+    "horizontal_flip_p": 0.5,
+    "vertical_flip_p": 0.5,
+    "elastic_p": 0.3,
+    "elastic_alpha": 1,
+    "elastic_sigma": 20,
+    "elastic_alpha_affine": 20,
+    "grid_distortion_p": 0.2,
+    "brightness_contrast_p": 0.5,
+    "brightness_limit": 0.1,
+    "contrast_limit": 0.1,
+    "gauss_noise_p": 0.3,
+    "gauss_noise_mean_range": [
+      -0.1,
+      0.1
+    ],
+    "gauss_noise_std_range": [
+      0.1,
+      0.5
+    ]
   },
   "show_time": false,
   "show_scale": false,
