update(config): new run

--- a/config/best_synthetic_config_A.json
+++ b/config/best_synthetic_config_A.json
@@ -5,86 +5,91 @@
     462
   ],
   "fps": 5,
-  "num_frames": 50,
+  "num_frames": 10,
   "color_mode": true,
-  "growth_speed": 2.160308893042452,
-  "shrink_speed": 3.4386532842060546,
-  "catastrophe_prob": 0.0011198572327852435,
-  "rescue_prob": 0.0005014896651934128,
-  "min_base_wagon_length": 16.853544010228294,
-  "max_base_wagon_length": 42.348382289733316,
-  "max_num_wagons": 17,
-  "max_angle": 0.37511103791678835,
-  "max_angle_sign_changes": 0,
-  "prob_to_flip_bend": 0.023982735841437838,
-  "min_length_min": 37,
-  "min_length_max": 83,
-  "max_length_min": 84,
-  "max_length_max": 204,
-  "min_wagon_length_min": 10,
-  "min_wagon_length_max": 17,
-  "max_wagon_length_min": 11,
-  "max_wagon_length_max": 22,
-  "pause_on_max_length": 5,
-  "pause_on_min_length": 5,
-  "num_tubuli": 13,
-  "tubuli_min_dist": 48,
-  "margin": 6,
-  "sigma_x": 0.6566813242722165,
-  "sigma_y": 1.635642038106259,
-  "width_var_std": 0.04189400424589451,
-  "background_level": 0.8226916771778475,
-  "tubulus_contrast": 0.2149043615661216,
-  "seed_red_channel_boost": 0.8944620371315525,
+  "growth_speed": 1.3784576134263458,
+  "shrink_speed": 3.881314640430951,
+  "catastrophe_prob": 0.011936283940144982,
+  "rescue_prob": 0.006617364750569479,
+  "min_base_wagon_length": 28.974204539081224,
+  "max_base_wagon_length": 20.112425253935815,
+  "max_num_wagons": 15,
+  "max_angle": 0.1387183778964355,
+  "bending_prob": 0.46074730645427253,
+  "max_angle_sign_changes": 2,
+  "prob_to_flip_bend": 0.09281681672315137,
+  "min_length_min": 59,
+  "min_length_max": 106,
+  "max_length_min": 125,
+  "max_length_max": 275,
+  "min_wagon_length_min": 2,
+  "min_wagon_length_max": 18,
+  "max_wagon_length_min": 20,
+  "max_wagon_length_max": 31,
+  "pause_on_max_length": 1,
+  "pause_on_min_length": 7,
+  "num_tubuli": 26,
+  "tubuli_seed_min_dist": 39,
+  "margin": 1,
+  "sigma_x": 1.9404884928068127,
+  "sigma_y": 0.4389423443716112,
+  "width_var_std": 0.018599913616408822,
+  "background_level": 0.5248719033045653,
+  "tubulus_contrast": 0.021651708846247612,
+  "seed_red_channel_boost": 0.20959923659938007,
   "annotation_color_rgb": [
     1.0,
     1.0,
     1.0
   ],
-  "tip_brightness_factor": 1.8624440600421235,
-  "quantum_efficiency": 138.74659415869277,
-  "gaussian_noise": 0.13662588057102248,
-  "bleach_tau": 98.91716111881675,
-  "jitter_px": 0.2646978784935781,
-  "vignetting_strength": 0.09587359052767827,
-  "global_blur_sigma": 2.0842925640674848,
+  "tip_brightness_factor": 1.3520990467597271,
+  "quantum_efficiency": 57.03843073387346,
+  "gaussian_noise": 0.11685405931259027,
+  "bleach_tau": 503.4225870247005,
+  "jitter_px": 1.6841947733323097,
+  "vignetting_strength": 0.0189908781552972,
+  "global_blur_sigma": 2.999689354979809,
   "fixed_spots": {
-    "count": 97,
-    "intensity_min": 0.038574202246758435,
-    "intensity_max": 0.21201304772451074,
-    "radius_min": 1,
-    "radius_max": 6,
-    "kernel_size_min": 0,
-    "kernel_size_max": 7,
-    "sigma": 4.029184477487998,
+    "count": 76,
+    "intensity_min": 0.05330251107790026,
+    "intensity_max": 0.12461862329494887,
+    "radius_min": 4,
+    "radius_max": 7,
+    "kernel_size_min": 4,
+    "kernel_size_max": 8,
+    "sigma": 0.10103108141812668,
+    "color_mode": "dark",
     "max_step": null
   },
   "moving_spots": {
-    "count": 4,
-    "intensity_min": 0.06458818105096156,
-    "intensity_max": 0.2166254267218608,
-    "radius_min": 5,
-    "radius_max": 8,
-    "kernel_size_min": 1,
-    "kernel_size_max": 8,
-    "sigma": 4.523595892931,
-    "max_step": 7
+    "count": 11,
+    "intensity_min": 0.08813626126800289,
+    "intensity_max": 0.15086223914479574,
+    "radius_min": 2,
+    "radius_max": 7,
+    "kernel_size_min": 0,
+    "kernel_size_max": 7,
+    "sigma": 1.6105036147345873,
+    "color_mode": "dark",
+    "max_step": 4
   },
   "random_spots": {
-    "count": 23,
-    "intensity_min": 0.009134665653912237,
-    "intensity_max": 0.12271077728240827,
-    "radius_min": 5,
+    "count": 31,
+    "intensity_min": 0.024827673931527922,
+    "intensity_max": 0.03919406900007776,
+    "radius_min": 1,
     "radius_max": 6,
-    "kernel_size_min": 0,
-    "kernel_size_max": 5,
-    "sigma": 0.7485942241232897,
+    "kernel_size_min": 1,
+    "kernel_size_max": 7,
+    "sigma": 1.3995246433383106,
+    "color_mode": "dark",
     "max_step": null
   },
-  "show_time": false,
-  "show_scale": false,
-  "um_per_pixel": 0.15914197587162907,
-  "scale_bar_um": 12.605969378468277,
-  "generate_tubuli_mask": true,
-  "generate_seed_mask": true
+  "albumentations": null,
+  "show_time": true,
+  "show_scale": true,
+  "um_per_pixel": 0.4674317196374328,
+  "scale_bar_um": 15.956204940236448,
+  "generate_tubuli_mask": false,
+  "generate_seed_mask": false
 }
