--- a/config/tuning_config_A.json
+++ b/config/tuning_config_A.json
@@ -3,7 +3,7 @@
   "hf_cache_dir": null,
   "reference_series_dir": "data/mpi/type_A",
   "num_compare_series": 5,
-  "num_compare_frames": 1,
+  "num_compare_frames": 20,
   "temp_dir": ".temp/",
   "output_config_file": "config/best_synthetic_config_A.json",
   "output_config_id": "best_A",
@@ -11,7 +11,7 @@
   "direction": "maximize",
   "similarity_metric": "mahalanobis",
   "num_trials": 2,
-  "pca_components": null,
+  "pca_components": 64,
   "load_if_exists": true,
   "img_size": [
     462,
