refactor(microtubule): rename tubuli references to microtubule for consistency

--- a/config/best_synthetic_config_A.json
+++ b/config/best_synthetic_config_A.json
@@ -7,89 +7,89 @@
   "fps": 5,
   "num_frames": 10,
   "color_mode": true,
-  "growth_speed": 1.3784576134263458,
-  "shrink_speed": 3.881314640430951,
-  "catastrophe_prob": 0.011936283940144982,
-  "rescue_prob": 0.006617364750569479,
-  "min_base_wagon_length": 28.974204539081224,
-  "max_base_wagon_length": 20.112425253935815,
-  "max_num_wagons": 15,
-  "max_angle": 0.1387183778964355,
-  "bending_prob": 0.46074730645427253,
+  "growth_speed": 1.4934865311759369,
+  "shrink_speed": 3.0152658623860393,
+  "catastrophe_prob": 0.0013214366529197745,
+  "rescue_prob": 0.016893150648806938,
+  "min_base_wagon_length": 19.494381453125342,
+  "max_base_wagon_length": 29.78550623630693,
+  "max_num_wagons": 7,
+  "max_angle": 0.3137917498531457,
+  "bending_prob": 0.13267644879874513,
   "max_angle_sign_changes": 2,
-  "prob_to_flip_bend": 0.09281681672315137,
-  "min_length_min": 59,
-  "min_length_max": 106,
-  "max_length_min": 125,
-  "max_length_max": 275,
-  "min_wagon_length_min": 2,
-  "min_wagon_length_max": 18,
-  "max_wagon_length_min": 20,
-  "max_wagon_length_max": 31,
-  "pause_on_max_length": 1,
-  "pause_on_min_length": 7,
-  "num_tubuli": 26,
-  "tubuli_seed_min_dist": 39,
-  "margin": 1,
-  "sigma_x": 1.9404884928068127,
-  "sigma_y": 0.4389423443716112,
-  "width_var_std": 0.018599913616408822,
-  "background_level": 0.5248719033045653,
-  "tubulus_contrast": 0.021651708846247612,
-  "seed_red_channel_boost": 0.20959923659938007,
+  "prob_to_flip_bend": 0.009264648395129508,
+  "min_length_min": 68,
+  "min_length_max": 102,
+  "microtubule_length_min": 81,
+  "microtubule_length_max": 299,
+  "min_wagon_length_min": 9,
+  "min_wagon_length_max": 19,
+  "max_wagon_length_min": 19,
+  "max_wagon_length_max": 33,
+  "pause_on_max_length": 2,
+  "pause_on_min_length": 0,
+  "num_microtubule": 12,
+  "microtubule_seed_min_dist": 42,
+  "margin": 8,
+  "sigma_x": 1.3822781648177316,
+  "sigma_y": 1.7931082210256695,
+  "width_var_std": 0.043731003702687114,
+  "background_level": 0.5120556869364333,
+  "tubulus_contrast": 0.06535235999033412,
+  "seed_red_channel_boost": 0.9577901116426746,
   "annotation_color_rgb": [
     1.0,
     1.0,
     1.0
   ],
-  "tip_brightness_factor": 1.3520990467597271,
-  "quantum_efficiency": 57.03843073387346,
-  "gaussian_noise": 0.11685405931259027,
-  "bleach_tau": 503.4225870247005,
-  "jitter_px": 1.6841947733323097,
-  "vignetting_strength": 0.0189908781552972,
-  "global_blur_sigma": 2.999689354979809,
+  "tip_brightness_factor": 1.611036569865019,
+  "quantum_efficiency": 31.907523508532925,
+  "gaussian_noise": 0.07278286359389016,
+  "bleach_tau": 260.9643459079716,
+  "jitter_px": 0.49799109194349783,
+  "vignetting_strength": 0.18637632191442455,
+  "global_blur_sigma": 2.603577190443022,
   "fixed_spots": {
-    "count": 76,
-    "intensity_min": 0.05330251107790026,
-    "intensity_max": 0.12461862329494887,
+    "count": 49,
+    "intensity_min": 0.05074709773152188,
+    "intensity_max": 0.21666810611787113,
     "radius_min": 4,
-    "radius_max": 7,
-    "kernel_size_min": 4,
-    "kernel_size_max": 8,
-    "sigma": 0.10103108141812668,
+    "radius_max": 5,
+    "kernel_size_min": 1,
+    "kernel_size_max": 6,
+    "sigma": 1.146134809657472,
     "color_mode": "dark",
     "max_step": null
   },
   "moving_spots": {
-    "count": 11,
-    "intensity_min": 0.08813626126800289,
-    "intensity_max": 0.15086223914479574,
-    "radius_min": 2,
-    "radius_max": 7,
-    "kernel_size_min": 0,
-    "kernel_size_max": 7,
-    "sigma": 1.6105036147345873,
+    "count": 14,
+    "intensity_min": 0.04282111892505607,
+    "intensity_max": 0.2163507341534456,
+    "radius_min": 5,
+    "radius_max": 5,
+    "kernel_size_min": 4,
+    "kernel_size_max": 6,
+    "sigma": 0.6268426596805314,
     "color_mode": "dark",
-    "max_step": 4
+    "max_step": 8
   },
   "random_spots": {
-    "count": 31,
-    "intensity_min": 0.024827673931527922,
-    "intensity_max": 0.03919406900007776,
+    "count": 4,
+    "intensity_min": 0.005580243098285802,
+    "intensity_max": 0.059089362851973824,
     "radius_min": 1,
-    "radius_max": 6,
-    "kernel_size_min": 1,
-    "kernel_size_max": 7,
-    "sigma": 1.3995246433383106,
+    "radius_max": 5,
+    "kernel_size_min": 4,
+    "kernel_size_max": 10,
+    "sigma": 4.434971214155984,
     "color_mode": "dark",
     "max_step": null
   },
   "albumentations": null,
   "show_time": true,
   "show_scale": true,
-  "um_per_pixel": 0.4674317196374328,
-  "scale_bar_um": 15.956204940236448,
-  "generate_tubuli_mask": false,
+  "um_per_pixel": 0.07376137713165568,
+  "scale_bar_um": 13.963725140416502,
+  "generate_microtubule_mask": false,
   "generate_seed_mask": false
 }
