--- a/config/best_synthetic_config_B.json
+++ b/config/best_synthetic_config_B.json
@@ -13,12 +13,12 @@
   "motion": 1.456019678376259,
   "min_length_min": 50,
   "min_length_max": 97,
-  "max_length_min": 115,
-  "max_length_max": 170,
+  "microtubule_length_min": 115,
+  "microtubule_length_max": 170,
   "pause_on_max_length": 4,
   "pause_on_min_length": 6,
-  "num_tubuli": 17,
-  "tubuli_min_dist": 15,
+  "num_microtubule": 17,
+  "microtubule_min_dist": 15,
   "margin": 12,
   "width_var_std": 0.10247582415635194,
   "bend_amplitude": 5.6719062659957356,
@@ -54,6 +54,6 @@
   "show_scale": false,
   "um_per_pixel": 0.48969631347432285,
   "scale_bar_um": 10.973869843098672,
-  "generate_tubuli_mask": true,
+  "generate_microtubule_mask": true,
   "generate_seed_mask": true
 }
