--- a/config/synthetic_config_large.json
+++ b/config/synthetic_config_large.json
@@ -20,16 +20,16 @@
   "prob_to_flip_bend": 0.001,
   "min_length_min": 20,
   "min_length_max": 50,
-  "max_length_min": 80,
-  "max_length_max": 150,
+  "microtubule_length_min": 80,
+  "microtubule_length_max": 150,
   "min_wagon_length_min": 1,
   "min_wagon_length_max": 5,
   "max_wagon_length_min": 10,
   "max_wagon_length_max": 20,
   "pause_on_max_length": 5,
   "pause_on_min_length": 10,
-  "num_tubuli": 20,
-  "tubuli_seed_min_dist": 50,
+  "num_microtubule": 20,
+  "microtubule_seed_min_dist": 50,
   "margin": 5,
   "sigma_x": 0.3,
   "sigma_y": 0.8,
@@ -113,6 +113,6 @@
   "show_scale": false,
   "um_per_pixel": 0.5,
   "scale_bar_um": 2.0,
-  "generate_tubuli_mask": true,
+  "generate_microtubule_mask": true,
   "generate_seed_mask": true
 }
