--- a/config/synthetic_config_small.json
+++ b/config/synthetic_config_small.json
@@ -1,80 +1,75 @@
 {
-  "id": 14,
+  "id": 312,
   "img_size": [
-    512,
-    512
+    462,
+    462
   ],
   "fps": 5,
-  "num_frames": 3,
+  "num_frames": 20,
   "color_mode": true,
   "growth_speed": 2.5,
   "shrink_speed": 5.0,
-  "catastrophe_prob": 0.01,
-  "rescue_prob": 0.005,
+  "catastrophe_prob": 0.05,
+  "rescue_prob": 0.05,
+  "max_pause_at_min_frames": 50,
   "min_base_wagon_length": 10.0,
   "max_base_wagon_length": 50.0,
-  "max_num_wagons": 10,
+  "microtubule_length_min": 100,
+  "microtubule_length_max": 200,
+  "tail_wagon_length": 10.0,
   "max_angle": 0.1,
-  "bending_prob": 0.25,
-  "max_angle_sign_changes": 0,
-  "prob_to_flip_bend": 0.001,
-  "min_length_min": 20,
-  "min_length_max": 50,
-  "max_length_min": 80,
-  "max_length_max": 150,
-  "min_wagon_length_min": 1,
-  "min_wagon_length_max": 5,
-  "max_wagon_length_min": 10,
-  "max_wagon_length_max": 20,
-  "pause_on_max_length": 5,
-  "pause_on_min_length": 10,
-  "num_tubuli": 20,
-  "tubuli_seed_min_dist": 50,
+  "bending_prob": 0.5,
+  "max_angle_sign_changes": 1,
+  "prob_to_flip_bend": 0.01,
+  "num_microtubule": 20,
+  "microtubule_seed_min_dist": 50,
   "margin": 5,
   "sigma_x": 0.3,
-  "sigma_y": 0.7,
-  "width_var_std": 0.05,
-  "background_level": 0.7,
-  "tubulus_contrast": -0.15,
-  "seed_red_channel_boost": 0.2,
-  "annotation_color_rgb": [
-    1.0,
-    1.0,
-    1.0
-  ],
-  "tip_brightness_factor": 1.0,
+  "sigma_y": 0.8,
+  "tubule_width_variation": 0.05,
+  "background_level": 0.8,
+  "tubulus_contrast": -0.4,
+  "seed_red_channel_boost": 0.5,
+  "tip_brightness_factor": 1.2,
+  "red_channel_noise_std": 0.01,
   "quantum_efficiency": 50.0,
   "gaussian_noise": 0.09,
   "bleach_tau": Infinity,
-  "jitter_px": 0.1,
+  "jitter_px": 0.5,
   "vignetting_strength": 0.05,
   "global_blur_sigma": 0.9,
   "fixed_spots": {
-    "count": 150,
+    "count": 30,
     "intensity_min": 0.005,
     "intensity_max": 0.1,
     "radius_min": 1,
-    "radius_max": 5,
+    "radius_max": 3,
     "kernel_size_min": 0,
     "kernel_size_max": 3,
-    "sigma": 0.2,
+    "sigma": 0.1,
+    "polygon_p": 0.3,
+    "polygon_vertex_count_min": 3,
+    "polygon_vertex_count_max": 7,
     "color_mode": "dark",
     "max_step": null
   },
   "moving_spots": {
-    "count": 100,
+    "count": 20,
     "intensity_min": 0.005,
-    "intensity_max": 0.1,
+    "intensity_max": 0.08,
     "radius_min": 1,
-    "radius_max": 5,
+    "radius_max": 3,
     "kernel_size_min": 0,
     "kernel_size_max": 2,
     "sigma": 0.3,
+    "polygon_p": 0.0,
+    "polygon_vertex_count_min": 3,
+    "polygon_vertex_count_max": 7,
     "color_mode": "dark",
     "max_step": 5
   },
   "random_spots": {
-    "count": 200,
+    "count": 20,
     "intensity_min": 0.005,
     "intensity_max": 0.08,
     "radius_min": 1,
@@ -82,37 +77,22 @@
     "kernel_size_min": 0,
     "kernel_size_max": 2,
     "sigma": 0.5,
+    "polygon_p": 0.0,
+    "polygon_vertex_count_min": 3,
+    "polygon_vertex_count_max": 7,
     "color_mode": "dark",
     "max_step": null
   },
-  "albumentations": {
-    "p": 0.0,
-    "rotate_limit": 15,
-    "shift_scale_rotate_p": 0.5,
-    "horizontal_flip_p": 0.5,
-    "vertical_flip_p": 0.5,
-    "elastic_p": 0.3,
-    "elastic_alpha": 1,
-    "elastic_sigma": 20,
-    "elastic_alpha_affine": 20,
-    "grid_distortion_p": 0.2,
-    "brightness_contrast_p": 0.5,
-    "brightness_limit": 0.1,
-    "contrast_limit": 0.1,
-    "gauss_noise_p": 0.3,
-    "gauss_noise_mean_range": [
-      -0.1,
-      0.1
-    ],
-    "gauss_noise_std_range": [
-      0.1,
-      0.5
-    ]
-  },
-  "show_time": false,
-  "show_scale": false,
-  "um_per_pixel": 0.5,
-  "scale_bar_um": 2.0,
-  "generate_tubuli_mask": true,
-  "generate_seed_mask": true
+  "albumentations": null,
+  "show_time": true,
+  "show_scale": true,
+  "annotation_color_rgb": [
+    1.0,
+    1.0,
+    1.0
+  ],
+  "um_per_pixel": 0.1,
+  "scale_bar_um": 5.0,
+  "generate_microtubule_mask": true,
+  "generate_seed_mask": false
 }
