--- a/config/tuning_config_A.json
+++ b/config/tuning_config_A.json
@@ -34,7 +34,7 @@
     0.0005,
     0.02
   ],
-  "pause_on_max_length_range": [
+  "pause_on_microtubule_length_range": [
     0,
     10
   ],
@@ -94,19 +94,19 @@
     80,
     120
   ],
-  "max_length_min_range": [
+  "microtubule_length_min_range": [
     80,
     150
   ],
-  "max_length_max_range": [
+  "microtubule_length_max_range": [
     150,
     300
   ],
-  "num_tubuli_range": [
+  "num_microtubule_range": [
     10,
     30
   ],
-  "tubuli_seed_min_dist_range": [
+  "microtubule_seed_min_dist_range": [
     10,
     50
   ],
