refactor(config): rename length and sigma parameters for clarity and consistency

--- a/config/best_synthetic_config_B.json
+++ b/config/best_synthetic_config_B.json
@@ -24,8 +24,8 @@
   "bend_amplitude": 5.6719062659957356,
   "bend_prob": 0.37180954152279105,
   "bend_straight_fraction": 0.49982699248699125,
-  "sigma_x": 1.0137244493290023,
-  "sigma_y": 1.0851591472420203,
+  "psf_sigma_h": 1.0137244493290023,
+  "psf_sigma_v": 1.0851591472420203,
   "background_level": 0.9904884824995526,
   "tubulus_contrast": 0.2570401929259434,
   "gaussian_noise": 0.1513093343974478,
