--- a/config/synthetic_config_small.json
+++ b/config/synthetic_config_small.json
@@ -12,8 +12,8 @@
   "catastrophe_prob": 0.05,
   "rescue_prob": 0.05,
   "max_pause_at_min_frames": 50,
-  "min_base_wagon_length": 10.0,
-  "max_base_wagon_length": 50.0,
+  "base_wagon_length_min": 10.0,
+  "base_wagon_length_max": 50.0,
   "microtubule_length_min": 100,
   "microtubule_length_max": 200,
   "tail_wagon_length": 10.0,
@@ -24,8 +24,8 @@
   "num_microtubule": 20,
   "microtubule_seed_min_dist": 50,
   "margin": 5,
-  "sigma_x": 0.3,
-  "sigma_y": 0.8,
+  "psf_sigma_h": 0.3,
+  "psf_sigma_v": 0.8,
   "tubule_width_variation": 0.05,
   "background_level": 0.8,
   "tubulus_contrast": -0.4,
