--- a/config/best_synthetic_config_A.json
+++ b/config/best_synthetic_config_A.json
@@ -11,8 +11,8 @@
   "shrink_speed": 3.0152658623860393,
   "catastrophe_prob": 0.0013214366529197745,
   "rescue_prob": 0.016893150648806938,
-  "min_base_wagon_length": 19.494381453125342,
-  "max_base_wagon_length": 29.78550623630693,
+  "base_wagon_length_min": 19.494381453125342,
+  "base_wagon_length_max": 29.78550623630693,
   "max_num_wagons": 7,
   "max_angle": 0.3137917498531457,
   "bending_prob": 0.13267644879874513,
@@ -31,8 +31,8 @@
   "num_microtubule": 12,
   "microtubule_seed_min_dist": 42,
   "margin": 8,
-  "sigma_x": 1.3822781648177316,
-  "sigma_y": 1.7931082210256695,
+  "psf_sigma_h": 1.3822781648177316,
+  "psf_sigma_v": 1.7931082210256695,
   "width_var_std": 0.043731003702687114,
   "background_level": 0.5120556869364333,
   "tubulus_contrast": 0.06535235999033412,
