--- a/config/synthetic_config_large.json
+++ b/config/synthetic_config_large.json
@@ -11,8 +11,8 @@
   "shrink_speed": 5.0,
   "catastrophe_prob": 0.01,
   "rescue_prob": 0.005,
-  "min_base_wagon_length": 10.0,
-  "max_base_wagon_length": 50.0,
+  "base_wagon_length_min": 10.0,
+  "base_wagon_length_max": 50.0,
   "max_num_wagons": 10,
   "max_angle": 0.1,
   "bending_prob": 0.25,
@@ -31,8 +31,8 @@
   "num_microtubule": 20,
   "microtubule_seed_min_dist": 50,
   "margin": 5,
-  "sigma_x": 0.3,
-  "sigma_y": 0.8,
+  "psf_sigma_h": 0.3,
+  "psf_sigma_v": 0.8,
   "width_var_std": 0.05,
   "background_level": 0.7,
   "tubulus_contrast": -0.35,
