feat(dependencies): add hf_xet to project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
   "transformers",
   "cellpose-adapt @ git+https://github.com/mario-koddenbrock/cellpose-adapt.git",
   "albumentations",
-  "btrack"
+  "btrack",
+  "hf_xet"
 ]
 
 [project.urls]
