feat(config): rename tuning configuration files and update similarity metric to FID

--- a/config/tuning_config_A_mahalanobis.json
+++ b/config/tuning_config_A_mahalanobis.json
@@ -5,11 +5,11 @@
   "num_compare_series": 5,
   "num_compare_frames": 5,
   "temp_dir": ".temp",
-  "output_config_file": "best_A_ndb.json",
-  "output_config_id": "best_A_ndb",
+  "output_config_file": "best_A_fid.json",
+  "output_config_id": "best_A_fid",
   "output_config_num_frames": 50,
   "direction": "maximize",
-  "similarity_metric": "ndb",
+  "similarity_metric": "fid",
   "num_trials": 20000,
   "pca_components": 0,
   "load_if_exists": true,
