--- a/config/synthetic_config_small.json
+++ b/config/synthetic_config_small.json
@@ -21,30 +21,32 @@
   "bending_prob": 0.5,
   "max_angle_sign_changes": 1,
   "prob_to_flip_bend": 0.01,
-  "num_microtubule": 20,
+  "num_microtubule": 15,
   "microtubule_seed_min_dist": 50,
   "margin": 5,
-  "psf_sigma_h": 0.3,
-  "psf_sigma_v": 0.8,
+  "psf_sigma_h": 0.4,
+  "psf_sigma_v": 0.7,
   "tubule_width_variation": 0.05,
-  "background_level": 0.8,
-  "tubulus_contrast": -0.1,
+  "background_level": 0.9,
+  "tubulus_contrast": -0.3,
   "seed_red_channel_boost": 0.2,
   "tip_brightness_factor": 1.2,
-  "red_channel_noise_std": 0.01,
+  "brightness": 0.0,
+  "contrast": 10.0,
+  "red_channel_noise_std": 0.1,
   "quantum_efficiency": 100.0,
-  "gaussian_noise": 0.09,
+  "gaussian_noise": 0.1,
   "jitter_px": 0.5,
   "vignetting_strength": 0.05,
-  "global_blur_sigma": 0.9,
+  "global_blur_sigma": 0.4,
   "fixed_spots": {
-    "count": 50,
-    "intensity_min": -0.1,
+    "count": 1000,
+    "intensity_min": -0.3,
     "intensity_max": 0.1,
-    "radius_min": 2,
-    "radius_max": 5,
-    "kernel_size_min": 3,
-    "kernel_size_max": 5,
+    "radius_min": 1,
+    "radius_max": 2,
+    "kernel_size_min": 0,
+    "kernel_size_max": 1,
     "sigma": 0.1,
     "polygon_p": 0.1,
     "polygon_vertex_count_min": 3,
@@ -52,36 +54,36 @@
     "max_step": null
   },
   "moving_spots": {
-    "count": 20,
-    "intensity_min": -0.1,
+    "count": 100,
+    "intensity_min": -0.2,
     "intensity_max": 0.1,
-    "radius_min": 1,
-    "radius_max": 3,
+    "radius_min": 3,
+    "radius_max": 8,
     "kernel_size_min": 0,
     "kernel_size_max": 2,
     "sigma": 0.3,
-    "polygon_p": 0.0,
-    "polygon_vertex_count_min": 3,
-    "polygon_vertex_count_max": 7,
+    "polygon_p": 0.9999,
+    "polygon_vertex_count_min": 7,
+    "polygon_vertex_count_max": 12,
     "max_step": 5
   },
   "random_spots": {
-    "count": 20,
-    "intensity_min": -0.1,
+    "count": 1000,
+    "intensity_min": -0.3,
     "intensity_max": 0.1,
     "radius_min": 1,
-    "radius_max": 5,
+    "radius_max": 2,
     "kernel_size_min": 0,
-    "kernel_size_max": 2,
-    "sigma": 0.5,
-    "polygon_p": 0.0,
-    "polygon_vertex_count_min": 5,
+    "kernel_size_max": 1,
+    "sigma": 0.1,
+    "polygon_p": 0.1,
+    "polygon_vertex_count_min": 3,
     "polygon_vertex_count_max": 7,
     "max_step": null
   },
   "albumentations": null,
-  "show_time": true,
-  "show_scale": true,
+  "show_time": false,
+  "show_scale": false,
   "annotation_color_rgb": [
     1.0,
     1.0,
